fix: specificity issue with search's z-index
Issue: #232

--- a/modules/core/css/components/Search.less
+++ b/modules/core/css/components/Search.less
@@ -1,4 +1,4 @@
-.ext-datamaps-control-search {
+.leaflet-control.ext-datamaps-control-search {
     position: relative;
     z-index: 810;
     display: flex;
